--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "next": "16.1.6",
     "openai": "^6.18.0",
     "pdf-lib": "^1.17.1",
-    "pdf-to-img": "^5.0.0",
+    "pdfjs-dist": "^5.4.624",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-dropzone": "^14.4.0",
